--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,50 @@
 include:
   - ./mocks/mock-oidc/compose.yml
-  - ./backend/compose.yml
+
+services:
+  backend:
+    build: backend
+    ports:
+      - "8080:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:8102/azure-mock
+      AZURE_APP_CLIENT_ID: historisk-helt-backend
+    env_file:
+      - path: ../../local.env
+        required: false
+
+  #  backend-proxy:
+  #    image: alpine/socat
+  #    command:
+  #      "tcp-l:80,fork,reuseaddr tcp:host.docker.internal:8080"
+  #    extra_hosts:
+  #      - "host.docker.internal:host-gateway"
+
+  ingress:
+    image: alpine/socat
+    command:
+      "tcp-l:80,fork,reuseaddr tcp:wonderwall:80"
+    ports:
+      - "3000:80"
+
+  wonderwall:
+    image: ghcr.io/nais/wonderwall:latest
+    command: >
+      --openid.client-id=bogus
+      --openid.client-secret=not-so-secret
+      --openid.well-known-url=http://host.docker.internal:8102/azure-mock/.well-known/openid-configuration
+      --ingress=http://localhost:3000
+      --bind-address=0.0.0.0:80
+      --upstream-host=localhost:8080
+      --log-level=debug
+      --log-format=text
+    restart: on-failure
+    ports:
+      - "4000:80"
+    depends_on:
+      - "mock-oidc"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+      - "localhost:host-gateway"
