--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,16 @@ on:
       - main
 
 jobs:
-  build:
+  backend:
+    name: "Bygg backend"
     runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
       id-token: write
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
+      telemetry:  ${{ steps.docker-build-push.outputs.telemetry }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -19,6 +23,14 @@ jobs:
           distribution: temurin
           java-version: '21'
           cache: maven
+
+      - name: debug
+        run: |
+          echo ============================================================
+          env
+          echo ============================================================
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 
       - name: Build artifacts
         run: mvn --batch-mode verify
@@ -32,11 +44,23 @@ jobs:
           team: historisk
           docker_context: ./backend
 
+  deploy_dev:
+    needs:
+      - backend
+    name: "Deploy til dev"
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Deploy backend til dev-gcp
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
           RESOURCE: .nais/app/backend.yaml
           VARS: .nais/dev.json
-          WORKLOAD_IMAGE: ${{ steps.docker-build-push.outputs.image }}
-          TELEMETRY: ${{ steps.docker-build-push.outputs.telemetry }}
+          WORKLOAD_IMAGE: ${{ needs.backend.outputs.image }}
+          TELEMETRY: ${{ needs.backend.outputs.telemetry }}
