--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,15 @@ jobs:
           distribution: temurin
           java-version: '21'
           cache: maven
-
-
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
           cache: npm
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Installere node moduler
         working-directory: ./frontend
-        run: npm install
+        run: npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 
