--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
           node-version: '22'
           cache: npm
           cache-dependency-path: frontend/package-lock.json
+          registry-url: "https://npm.pkg.github.com"
 
       - name: Installere node moduler
         working-directory: ./frontend
@@ -40,9 +41,7 @@ jobs:
         run: npm run build
 
       - name: Build artifacts
-        run: |
-          env
-          mvn verify
+        run: mvn --batch-mode verify
         env:
           NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 
