--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,11 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
           registry-url: "https://npm.pkg.github.com"
 
-      - name: Installere node moduler
-        working-directory: ./frontend
-        run: npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+#      - name: Installere node moduler
+#        working-directory: ./frontend
+#        run: npm ci
+#        env:
+#          NODE_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 
       - name: Bygge frontend
         working-directory: ./frontend
