--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:8102/azure-mock
-      AZURE_APP_CLIENT_ID: historisk-helt-backend
+      AZURE_APP_CLIENT_ID: historisk-superapp
     env_file:
       - path: ../../local.env
         required: false
@@ -37,7 +37,7 @@ services:
     # Auth-proxy som lytter på 4000 og gir bearertoken til backend-proxy
     image: ghcr.io/nais/wonderwall:latest
     command: >
-      --openid.client-id=bogus
+      --openid.client-id=historisk-superapp
       --openid.client-secret=not-so-secret
       --openid.well-known-url=http://host.docker.internal:8102/azure-mock/.well-known/openid-configuration
       --ingress=http://localhost:3000
