--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "openapi-ts": "openapi-ts"
   },
   "dependencies": {
     "@navikt/ds-css": "^7.29.0",
@@ -22,6 +23,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "0.82.3",
     "@navikt/aksel-stylelint": "^7.29.0",
     "@tanstack/router-plugin": "^1.131.27",
     "@types/react": "^19.0.8",
@@ -32,5 +34,4 @@
     "vite": "^6.3.5",
     "vitest": "^3.0.5"
   }
-
 }
