--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -3,3 +3,5 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://host.docker.internal
 
 spring.web.resources.static-locations=file:./frontend/dist
 
+nais.token.endpoint=http://localhost:1232
+nais.token.exchange.endpoint=http://localhost:1232
