Docker compose oppsett av texas for test

--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -3,5 +3,5 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://host.docker.internal
 
 spring.web.resources.static-locations=file:./frontend/dist
 
-nais.token.endpoint=http://localhost:1232
-nais.token.exchange.endpoint=http://localhost:1232
+nais.token.endpoint=http://localhost:4100/api/v1/token
+nais.token.exchange.endpoint=http://localhost:4100/api/v1/token/exchange
