--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,19 +4,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>no.nav.historisk</groupId>
-        <artifactId>superapp-parent</artifactId>
+        <artifactId>superhelt-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>superapp-backend</artifactId>
-    <name>superapp-backend</name>
+    <artifactId>superhelt-backend</artifactId>
+    <name>superhelt-backend</name>
     <description>Saksbehandling og Utbetaling På Enkle Regler</description>
 
     <dependencies>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>superapp-frontend</artifactId>
+            <artifactId>superhelt-frontend</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
