--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>no.nav.historisk</groupId>
-        <artifactId>superapp-parent</artifactId>
+        <artifactId>superhelt-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>superapp-frontend</artifactId>
-    <name>superapp-frontend</name>
+    <artifactId>superhelt-frontend</artifactId>
+    <name>superhelt-frontend</name>
     <description>React frontend for supoer</description>
 
     <properties>
