--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     uses: ./.github/workflows/build-and-test.yml
     secrets: inherit
+    permissions:
+      packages: write
 
   deploy_dev:
     needs:
