--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -12,5 +12,12 @@ spring:
       static-locations:
         - classpath:/static
 
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
   jpa:
     open-in-view: false
+    hibernate:
+      ddl-auto: create
