Koperier over mock-server og noen libs

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <modules>
         <module>backend</module>
         <module>frontend</module>
-<!--        <module>mocks</module>-->
-<!--        <module>libs</module>-->
+        <module>mocks</module>
+        <module>libs</module>
     </modules>
 
 </project>
