Setter version i pom til revision for å kunne gi en fornuftig versionsnummer

--- a/mocks/mock-server/pom.xml
+++ b/mocks/mock-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>no.nav.historisk.mock</groupId>
         <artifactId>mocks</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>mock-server</artifactId>
