--- a/libs/tilgangsmaskin-dto/pom.xml
+++ b/libs/tilgangsmaskin-dto/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>no.nav.historisk.lib</groupId>
         <artifactId>libs</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>tilgangsmaskin-dto</artifactId>
