--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
     </parent>
     <groupId>no.nav.historisk</groupId>
     <artifactId>superhelt-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
     <name>superhelt-parent</name>
     <description>Saksbehandling og Utbetaling På Enkle Regler</description>
 
     <properties>
+        <revision>0.0.1-SNAPSHOT</revision>
         <java.version>21</java.version>
         <kotlin.version>1.9.25</kotlin.version>
     </properties>
