--- a/mocks/mock-server/pom.xml
+++ b/mocks/mock-server/pom.xml
@@ -17,12 +17,12 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>no.nav.historisk.lib</groupId>
+            <groupId>no.nav.historisk</groupId>
             <artifactId>oppgave</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>no.nav.historisk.lib</groupId>
+            <groupId>no.nav.historisk</groupId>
             <artifactId>tilgangsmaskin-dto</artifactId>
             <version>${project.version}</version>
         </dependency>
