--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -1,7 +1,10 @@
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://host.docker.internal:8102/azure-mock
+AZURE_OPENID_CONFIG_ISSUER=http://host.docker.internal:8102/azure-mock
 #spring.security.oauth2.resourceserver.jwt.audiences=historisk-helt-backend
 
 spring.web.resources.static-locations=file:./frontend/dist
 
 nais.token.endpoint=http://localhost:4100/api/v1/token
 nais.token.exchange.endpoint=http://localhost:4100/api/v1/token/exchange
+
+app.pdl.audience=api://mock.pdl.pdl-api/.default
+app.pdl.url=http://localhost:9080/pdl-mock
