Setter type for feil fra backend

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -21,7 +21,9 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+  mvc:
+    problemdetails:
+      enabled: true
 app:
   pdl:
     behandlingsnummer: B986
-
