--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@hey-api/openapi-ts": "0.82.3",
     "@navikt/aksel-stylelint": "^7.29.0",
     "@tanstack/router-plugin": "^1.131.27",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
