--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@api": ["./api"]
     },
     "noEmit": true
   }
