Flytter generert kode tilbake til src

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@api": ["./api"]
+      "@api": ["./src/api"],
+      "@api/*": ["./src/api/*"]
     },
     "noEmit": true
   }
