--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -6,5 +6,9 @@ spring.web.resources.static-locations=file:./frontend/dist
 nais.token.endpoint=http://localhost:4100/api/v1/token
 nais.token.exchange.endpoint=http://localhost:4100/api/v1/token/exchange
 
+app.gruppe.saksbehandler=gr_saksbehandler
+app.gruppe.attestant=gr_attestant
+app.gruppe.les=gr_les
+
 app.pdl.audience=api://mock.pdl.pdl-api/.default
 app.pdl.url=http://localhost:9080/pdl-mock
