--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>pdl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tilgangsmaskin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring boot dependencies -->
         <dependency>
