--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -12,3 +12,6 @@ app.gruppe.les=gr_les
 
 app.pdl.audience=api://mock.pdl.pdl-api/.default
 app.pdl.url=http://localhost:9080/pdl-mock
+
+app.tilgangsmaskin.url=http://localhost:9080/tilgangsmaskin-mock
+app.tilgangsmaskin.audience=api://mock.tilgangsmaskin/.default
