Deploy til dev på PR

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,3 +11,23 @@ jobs:
       packages: write
       contents: read
       id-token: write
+  deploy_dev:
+    needs:
+      - build
+    name: "Deploy til dev"
+    runs-on: ubuntu-latest
+    permissions:
+      packages: read
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Deploy backend til dev-gcp
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/app/backend.yaml
+          VARS: .nais/dev.json
+          IMAGE: ${{ needs.build.outputs.image }}
+          TELEMETRY: ${{ needs.build.outputs.telemetry }}
