Tilgangskontroll fra tilgangsmaskin (#7)
* Mapper gruppe fra jwt til rolle

* Mapper om authentiseringsfeil til 403 melding

* Mapper om authentiseringsfeil til 403 melding

* Mapper om grupper og roller

* _Klient for tilgangsmaskin

* Tester for tilgangsmaskin

* Tjeneste for tilgangsmaskin

* Deploy til dev på PR

* Kaster ikke exception ved kall mot pdl

* Fikser noen feil

* Søker etter person i header

* Viser person i personheader

* Viser person fra backend i personheader

* Utvikler tester

* Setter på tilgangs annotasjoner

* Sjekker tilgang på sak mot tilgangsmaskinen

* Test for annotasjoner for mot tilgangsmaskin

* Lager bedre mock for pdl og tilgangsmaskin

* Første forsøk på litt feilhåndtering i frontend

* Fiks gruppemapping

* Fikser test

--- a/.nais/app/backend.yaml
+++ b/.nais/app/backend.yaml
@@ -18,6 +18,10 @@ spec:
       claims:
         extra:
           - NAVident
+        groups:
+          - id: {{gruppe.saksbehandler}}
+          - id: {{gruppe.attestant}}
+          - id: {{gruppe.les}}
 
   liveness:
     path: /actuator/health/liveness
@@ -58,8 +62,19 @@ spec:
         - host: "dokdistfordeling.{{env}}-fss-pub.nais.io"
 
   env:
+    - name: APP_GRUPPE_SAKSBEHANDLER
+      value: "{{gruppe.saksbehandler}}"
+    - name: APP_GRUPPE_ATTESTANT
+      value: "{{gruppe.attestant}}"
+    - name: APP_GRUPPE_LES
+      value: "{{gruppe.les}}"
     - name: APP_PDL_URL
       value: https://pdl-api.{{env}}-fss-pub.nais.io
     - name: APP_PDL_AUDIENCE
       value: api://{{env}}-fss.pdl.pdl-api/.default
+    - name: APP_TILGANGSMASKIN_URL
+      value: "http://populasjonstilgangskontroll.tilgangsmaskin"
+    - name: APP_TILGANGSMASKIN_AUDIENCE
+      value: "api://{{env}}-gcp.tilgangsmaskin.populasjonstilgangskontroll/.default"
+
 
