--- a/libs/tilgangsmaskin/pom.xml
+++ b/libs/tilgangsmaskin/pom.xml
@@ -8,11 +8,16 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>tilgangsmaskin-dto</artifactId>
+    <artifactId>tilgangsmaskin</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
