secret som system property

--- a/.nais/app/backend.yaml
+++ b/.nais/app/backend.yaml
@@ -62,6 +62,8 @@ spec:
         - host: "dokdistfordeling.{{env}}-fss-pub.nais.io"
 
   env:
+    - name: APP_FNR_ENCRYPTOR_SECRET
+      value: "{{env}}-encryptor-superhelt-fnr"
     - name: APP_GRUPPE_SAKSBEHANDLER
       value: "{{gruppe.saksbehandler}}"
     - name: APP_GRUPPE_ATTESTANT
