Tester for opprett sak i sakscontroller

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -114,6 +114,13 @@
             <groupId>org.mockito.kotlin</groupId>
             <artifactId>mockito-kotlin</artifactId>
             <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.5.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
