--- a/backend/src/test/resources/application-dev.properties
+++ b/backend/src/test/resources/application-dev.properties
@@ -3,6 +3,9 @@ AZURE_OPENID_CONFIG_ISSUER=http://host.docker.internal:8102/azure-mock
 
 spring.web.resources.static-locations=file:./frontend/dist
 
+spring.kafka.security.protocol=PLAINTEXT
+KAFKA_BROKERS=localhost:9092
+
 nais.token.endpoint=http://localhost:4100/api/v1/token
 nais.token.exchange.endpoint=http://localhost:4100/api/v1/token/exchange
 
