Setter temp navn på topic

--- a/.nais/app/topic.yaml
+++ b/.nais/app/topic.yaml
@@ -2,7 +2,7 @@ apiVersion: kafka.nais.io/v1
 kind: Topic
 metadata:
 #  TODO sette rett navn på topic når det funker som det skal
-  name: superhelt.utbetaling.v0
+  name: superhelt.utbetaling.test
   namespace: historisk
   labels:
     team: historisk
