--- a/.nais/app/backend.yaml
+++ b/.nais/app/backend.yaml
@@ -1,5 +1,5 @@
-apiVersion: "nais.io/v1alpha1"
-kind: "Application"
+apiVersion: nais.io/v1alpha1
+kind: Application
 metadata:
   name: superhelt
   namespace: historisk
@@ -8,6 +8,8 @@ metadata:
 spec:
   image: "{{image}}"
   port: 8080
+  kafka:
+    pool: nav-{{env}}
   azure:
     sidecar:
       enabled: true
