--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: ${AZURE_OPENID_CONFIG_ISSUER}
-#          audiences: ${AZURE_APP_CLIENT_ID}
+  #          audiences: ${AZURE_APP_CLIENT_ID}
   web:
     resources:
       static-locations:
@@ -40,16 +40,18 @@ spring:
     security:
       protocol: SSL
     ssl:
-      key-store-location: ${KAFKA_KEYSTORE_PATH}
-      key-store-password: ${KAFKA_CREDSTORE_PASSWORD}
-      trust-store-location: ${KAFKA_TRUSTSTORE_PATH}
+      trust-store-type: JKS
+      trust-store-location: file:${KAFKA_TRUSTSTORE_PATH}
       trust-store-password: ${KAFKA_CREDSTORE_PASSWORD}
+      key-store-type: PKCS12
+      key-store-location: file:${KAFKA_KEYSTORE_PATH}
+      key-store-password: ${KAFKA_CREDSTORE_PASSWORD}
     producer:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         acks: all
         enable.idempotence: true
-        
+
     consumer:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
