--- a/.nais/app/topics.yaml
+++ b/.nais/app/topics.yaml
@@ -2,7 +2,7 @@ apiVersion: kafka.nais.io/v1
 kind: Topic
 metadata:
   #  TODO sette rett navn på topic når det funker som det skal
-  name: superhelt.utbetaling.test
+  name: utbetaling.test
   namespace: historisk
   labels:
     team: historisk
@@ -11,7 +11,7 @@ spec:
   acl:
     - team: historisk
       application: superhelt
-      access: readwrite
+      access: write
     - team: helved
       application: abetal
       access: read
