--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>tilgangsmaskin</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>helved</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring boot dependencies -->
         <dependency>
@@ -64,6 +69,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
 
 
         <dependency>
@@ -120,6 +131,12 @@
             <groupId>net.datafaker</groupId>
             <artifactId>datafaker</artifactId>
             <version>2.5.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
