Tester for utbetalingservice

--- a/backend/src/test/resources/application-junit.properties
+++ b/backend/src/test/resources/application-junit.properties
@@ -1,17 +1,16 @@
 AZURE_OPENID_CONFIG_ISSUER=http://mocked
 #spring.security.oauth2.resourceserver.jwt.audiences=historisk-helt-backend
-
 spring.web.resources.static-locations=file:./frontend/dist
-
 nais.token.endpoint=http://mocked
 nais.token.exchange.endpoint=http://mocked
-
 app.gruppe.saksbehandler=gr_saksbehandler
 app.gruppe.attestant=gr_attestant
 app.gruppe.les=gr_les
-
 app.pdl.audience=api://mock.pdl.pdl-api/.default
 app.pdl.url=http://mocked
-
 app.tilgangsmaskin.url=http://mocked
 app.tilgangsmaskin.audience=api://mock.tilgangsmaskin/.default
+
+#Kafka opplegg med embedded Kafka
+KAFKA_BROKERS=${spring.embedded.kafka.brokers}
+spring.kafka.security.protocol=PLAINTEXT
