Retter opp filnavn for topocs endringer

--- a/.github/workflows/kafka.yml
+++ b/.github/workflows/kafka.yml
@@ -5,7 +5,7 @@ on:
     #    branches:
     #      - main
     paths:
-      - '.nais/app/topics.yml'
+      - '.nais/app/topics.yaml'
       - '.github/workflows/kafka.yml'
 
 jobs:
