--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -4,8 +4,7 @@ app:
   utbetaling:
     #    TODO Sette rett navn på topic
     utbetaling-topic: historisk.utbetaling.test
-    status-topic: historisk.utbetaling.test
-#    status-topic: helved.status.v1
+    status-topic: helved.status.v1
 
 spring:
   application:
