--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,11 +76,10 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.13</version>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -103,7 +102,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-           <version>8.1</version>
+            <version>8.1</version>
         </dependency>
 
         <dependency>
