--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <revision>0.0.1-SNAPSHOT</revision>
         <java.version>21</java.version>
         <kotlin.version>1.9.25</kotlin.version>
+        <springdoc.version>2.8.14</springdoc.version>
     </properties>
     <modules>
         <module>backend</module>
