--- a/.nais/app/topics.yaml
+++ b/.nais/app/topics.yaml
@@ -1,8 +1,7 @@
 apiVersion: kafka.nais.io/v1
 kind: Topic
 metadata:
-  #  TODO sette rett navn på topic når det funker som det skal
-  name: utbetaling.test
+  name: utbetaling.v1
   namespace: historisk
   labels:
     team: historisk
