--- a/mocks/mock-server/compose.yml
+++ b/mocks/mock-server/compose.yml
@@ -7,8 +7,11 @@ services:
       - "9080:9080"
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:19092
     env_file:
       - path: ../../local.env
         required: false
 
-
+    depends_on:
+      - kafka
