--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,12 +1,19 @@
 {
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2022"
+    ],
     "isolatedModules": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
@@ -15,9 +22,15 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
-      "@api": ["./src/api"],
-      "@api/*": ["./src/api/*"]
+      "~/*": [
+        "./src/*"
+      ],
+      "@generated": [
+        "./generated"
+      ],
+      "@generated/*": [
+        "./generated/*"
+      ]
     },
     "noEmit": true
   }
