--- a/mocks/mock-server/src/main/resources/application.yml
+++ b/mocks/mock-server/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   helved:
-    utbetaling-topic: historisk.utbetaling.test
+    utbetaling-topic: historisk.utbetaling.v1
     status-topic: helved.status.v1
 
 spring:
