--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -3,9 +3,8 @@ app:
     behandlingsnummer: B986
   utbetaling:
     #    TODO Sette rett navn på topic
-    utbetaling-topic: historisk.utbetaling.test
-    status-topic: historisk.utbetaling.test
-#    status-topic: helved.status.v1
+    utbetaling-topic: historisk.utbetaling.v1
+    status-topic: helved.status.v1
 
 spring:
   application:
