--- a/compose.yml
+++ b/compose.yml
@@ -4,27 +4,27 @@ include:
 
 services:
 
-#  backend:
-##    backend spring boot inkludert  frontend som kjører på 8080
-#    build: backend
-#    ports:
-#      - "8080:8080"
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
-#    environment:
-#      AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:8102/azure-mock
-#      AZURE_APP_CLIENT_ID: historisk-superapp
-#    env_file:
-#      - path: ../../local.env
-#        required: false
-#
-#  frontend:
-#    # Proxy for frontend som kan skrues av for lokal utvikling med vite. Pekes på av wonderwall
-#    image: alpine/socat
-#    command:
-#      "tcp-l:80,fork,reuseaddr tcp:wonderwall:4000"
-#    ports:
-#      - "3000:80"
+  #  backend:
+  ##    backend spring boot inkludert  frontend som kjører på 8080
+  #    build: backend
+  #    ports:
+  #      - "8080:8080"
+  #    extra_hosts:
+  #      - "host.docker.internal:host-gateway"
+  #    environment:
+  #      AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:8102/azure-mock
+  #      AZURE_APP_CLIENT_ID: historisk-superapp
+  #    env_file:
+  #      - path: ../../local.env
+  #        required: false
+  #
+  #  frontend:
+  #    # Proxy for frontend som kan skrues av for lokal utvikling med vite. Pekes på av wonderwall
+  #    image: alpine/socat
+  #    command:
+  #      "tcp-l:80,fork,reuseaddr tcp:wonderwall:4000"
+  #    ports:
+  #      - "3000:80"
 
   backend-proxy:
     # Proxy for backend som pekes på av wonderwall. Trengs for å unngå problemer med å skru backend av og på
@@ -57,7 +57,7 @@ services:
       - "host.docker.internal:host-gateway"
       - "localhost:host-gateway"
 
-# https://github.com/nais/wonderwalled/blob/master/docker-compose.yml
+  # https://github.com/nais/wonderwalled/blob/master/docker-compose.yml
   texas:
     image: ghcr.io/nais/texas:latest
     ports:
@@ -74,7 +74,7 @@ services:
       AZURE_OPENID_CONFIG_JWKS_URI: http://host.docker.internal:8102/azure-mock/jwks
 
     restart: on-failure
-#    env_file: "${ENV_FILE:-.env}"
+    #    env_file: "${ENV_FILE:-.env}"
     extra_hosts:
       # See explanation in the wonderwall service
       - localhost:host-gateway
@@ -84,14 +84,15 @@ services:
     image: apache/kafka-native:latest
     container_name: kafka
     ports:
-      - 9092:9092
+      - "9092:9092"
+      - "19092:9092"
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093,PLAINTEXT_HOST://:19092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:19092,PLAINTEXT_HOST://kafka:19092
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
