--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,10 @@
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-router-devtools": "^1.131.27",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^4.1.12"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@hey-api/openapi-ts": "0.86.1",
+    "@hey-api/openapi-ts": "0.88.0",
     "@navikt/aksel-stylelint": "^7.29.0",
     "@tanstack/router-plugin": "^1.131.27",
     "@types/css-modules": "^1.0.5",
