Lager felles types i libs

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,11 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>common-types</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>pdl</artifactId>
             <version>${project.version}</version>
         </dependency>
