--- a/libs/tilgangsmaskin/pom.xml
+++ b/libs/tilgangsmaskin/pom.xml
@@ -11,6 +11,11 @@
     <artifactId>tilgangsmaskin</artifactId>
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-types</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
